# fastrdp

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.qmd  plot_rdp_2d_3d.py  pyproject.toml  setup.py  test_rdp3d.py
.github/workflows/: release.yml  test-python.yml
performance/: fastrdp_performance.py  measure_performance.cpp  measure_performance.py  plot_results.py  rdp_performance.py  setup.py
src/PyRDP/: wrapper.cpp
src/fastrdp/: Geometry.h  RamerDouglasPeucker.cpp  RamerDouglasPeucker.h  __init__.py  __init__.pyi  wrapper.cpp
tests/: plot_rdp_2d_3d.py  test_RDP.py  test_RDP_3D.py  test_rdp.py  test_rdpN.py
