[build-system]
requires = ["pybind11>=2.10", "setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fastrdp"
version = "0.3.2"
description = "Implementation of the Ramer-Douglas-Peucker algorithm"
readme = "README.md"
authors = [{ name = "Robert Dahl Jacobsen" }]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/robertdj/fastrdp"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
docs = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "rdp>=0.8",
]
performance = [
    "plotnine>=0.15.0",
    "polars[pandas]>=1.32.3",
]
